--- a/EstacionamentoWeb/Views/Usuario/Cadastrar.cshtml
+++ b/EstacionamentoWeb/Views/Usuario/Cadastrar.cshtml
@@ -13,7 +13,7 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="Cpf">Descrição:</label>
+            <label asp-for="Cpf">Cpf:</label>
             <input class="form-control" asp-for="Cpf" type="text" placeholder="CPF do Usuario" />
             <span class="text-danger" asp-validation-for="Cpf"></span>
         </div>
@@ -24,13 +24,15 @@
             <span class="text-danger" asp-validation-for="Email"></span>
         </div>
         <div class="form-group">
-            <label asp-for="Senha">Nome:</label>
+            <label asp-for="Senha">Senha:</label>
             <input class="form-control" asp-for="Senha" type="password" placeholder="Senha" />
             <span class="text-danger" asp-validation-for="Senha"></span>
         </div>
+
         <div class="form-group">
-            <label asp-for="Imagem">Imagem:</label>
-            <input class="form-control-file" type="file" name="file" />
+            <label asp-for="ConfirmacaoSenha">Confirmação da Senha:</label>
+            <input class="form-control" asp-for="ConfirmacaoSenha" type="password" placeholder="Senha" />
+            <span class="text-danger" asp-validation-for="ConfirmacaoSenha"></span>
         </div>
 
         <input class="btn btn-info" type="submit" value="Cadastrar" />
