--- a/EstacionamentoWeb/Views/Estacionar/Create.cshtml
+++ b/EstacionamentoWeb/Views/Estacionar/Create.cshtml
@@ -4,17 +4,7 @@
     ViewData["Title"] = "Create";
 }
 <form asp-action="Create" asp-controller="Estacionar" method="post">
-    <div>
-        <label asp-for="VeiculoId">Categoria:</label><br />
-        <select class="form-control" asp-items="@ViewBag.Veiculos" asp-for="VeiculoId">
-            <option> -- SELECIONE -- </option>
-        </select>
-    </div>
-    <div>
-        <label asp-for="EstacionamentoId">Categoria:</label><br />
-        <select class="form-control" asp-items="@ViewBag.Estacionamentos" asp-for="EstacionamentoId">
-            <option> -- SELECIONE -- </option>
-        </select>
-    </div>
+    @Html.DropDownListFor(m => m.QualquerCoisa, ViewBag.Veiculos as SelectList, new { @class = "form-control" })
+    @Html.DropDownListFor(m => m.EstacionamentoId, ViewBag.Estacionamentos as SelectList, new { @class = "form-control" })
     <input class="btn btn-info" type="submit" value="Cadastrar" />
 </form>
